# contact_sheet_to_vcards

./: .gitignore  README.md
contacts_to_vcards/: pyproject.toml
contacts_to_vcards/contacts_to_vcards/: main.py
